--- a/app/views/tasks/_form.html.erb
+++ b/app/views/tasks/_form.html.erb
@@ -11,6 +11,9 @@
     </div>
   <% end %>
 
+  <%= f.label :status, 'ステータス' %>
+  <%= f.text_field :status %>
+  
   <%= f.label :content, 'メッセージ' %>
   <%= f.text_field :content %>
 
