--- a/app/views/tasks/index.html.erb
+++ b/app/views/tasks/index.html.erb
@@ -1,3 +1,5 @@
+
+
 <h1>タスク一覧</h1>
 
 <ul>
@@ -6,5 +8,10 @@
   <% end %>
 </ul>
 
-
 <%= link_to '新規タスクの投稿', new_task_path %>
+<%= link_to 'ログイン', login_path %>
+<%= link_to 'ログアウト', login_path %>
+
+
+
+
